# otus_algo_hw_02

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.cpp  settings.gradle
.github/workflows/: cmake.yml  python.yml  rust.yml
app/: build.gradle
app/src/main/java/otus_algo_hw_02/: Tickets.java
app/src/test/java/otus_algo_hw_02/: TestTickets.java
src/: main  main.cpp  main.rs  tickets  tickets.c  tickets.h  tickets.java  tickets.kt  tickets.py  tickets.rs  tickets_c  tickets_c.c  version.cpp  version.h.in
test/: test_all.cpp
